--- a/templates/plotter.html
+++ b/templates/plotter.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/8.3.1/handsontable.full.min.js" integrity="sha512-VelAqwEqvlkUGWf/Tnyy4+yb2i81v/h4/38pr/W1bhYLThBWtgPZx2bnjbAozmSNW1Wrgf9rFiY2VbBsqJzpFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/8.3.1/handsontable.css" integrity="sha512-URC0TzPU4Wr0Vg2FBCJVBKUfLy79H6hiHOi34WFwsyJifwXPuRLPW4ItpKxLJSYvfIuTGgoGRcXUkdt5LKLnhA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -10,42 +11,57 @@
 </head>
 
 <body style="font-family: Arial">
+     <!-- functions to toggle forms -->
+     <script>
+              function plot() {
+                document.getElementById("plot").style.display = "block";
+                document.getElementById("transactions").style.display = "none";
+            };
+            function transactions() {
+                document.getElementById("plot").style.display = "none";
+                document.getElementById("transactions").style.display = "block";
+            };
+    </script>
 
-     <!-- As a heading -->
+    <!-- Nav Bar -->
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1"><b>CSS Plotter</b></span>
       </div>
     </nav>
 
+    <!-- Nav Tabs -->
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <button class="nav-link active" id="nav-plotter-tab" data-bs-toggle="tab" data-bs-target="#nav-plotter" type="button" role="tab" aria-controls="nav-plotter" aria-selected="true">plotter</button>
         <button class="nav-link" id="nav-transactions-tab" data-bs-toggle="tab" data-bs-target="#nav-transactions" type="button" role="tab" aria-controls="nav-transactions" aria-selected="false">transactions</button>
       </div>
     </nav>
+
+    <!-- Nav tab content -->
     <div class="tab-content" id="nav-tabContent">
-        <form class="" action="plot_trend" method="post">
-        <div class="tab-pane fade show active" id="nav-plotter" role="tabpanel" aria-labelledby="nav-plotter-tab">
-            <br>
-            stock code: <input type="text" name="stock_code" value="" placeholder="00001">
-            start date: <input type="text" name="start_date" value="" placeholder="yyyymmdd">
-            end date: <input type="text" name="end_date" value="" placeholder="yyyymmdd">
-            <button type="submit" class="btn btn-primary">Go</button>
-        </div>
+        <form id="plot" class="" action="plot_trend" method="post" name="plot_form">
+            <div class="tab-pane fade show active" id="nav-plotter" role="tabpanel" aria-labelledby="nav-plotter-tab">
+                <br>
+                stock code: <input type="text" name="stock_code" value="" placeholder="00001">
+                start date: <input type="text" name="start_date" value="" placeholder="yyyymmdd">
+                end date: <input type="text" name="end_date" value="" placeholder="yyyymmdd">
+                <button type="submit" class="btn btn-primary">Go</button>
+            </div>
         </form>
 
-        <form class="" action="data" method="post">
-        <div class="tab-pane fade" id="nav-transactions" role="tabpanel" aria-labelledby="nav-transactions-tab">
-            <br>
-            stock code: <input type="text" name="stock_code" value="" placeholder="00001">
-            start date: <input type="text" name="start_date" value="" placeholder="yyyymmdd">
-            end date: <input type="text" name="end_date" value="" placeholder="yyyymmdd">
-            <button type="submit" class="btn btn-primary">Go</button>
-        </div>
+        <form id="transactions" class="" action="find_transactions" method="post" name="transactions_form">
+            <div class="tab-pane fade" id="nav-transactions" role="tabpanel" aria-labelledby="nav-transactions-tab">
+                <br>
+                stock code: <input type="text" name="stock_code" value="" placeholder="00001">
+                start date: <input type="text" name="start_date" value="" placeholder="yyyymmdd">
+                end date: <input type="text" name="end_date" value="" placeholder="yyyymmdd">
+                <button type="submit" class="btn btn-primary">Go</button>
+            </div>
         </form>
     </div>
 
+    <!-- Chart  -->
     <canvas id="bar-chart" width="1200" height="500"></canvas>
     <script>
         var out = {{ data | tojson }};
@@ -79,6 +95,7 @@
         })
     </script>
 
+    <!-- Table -->
     <br>
     <p style="text-align: center;">Holding pattern across date range</p>
     <div style="width: 1300px;">
