--- a/templates/plotter.html
+++ b/templates/plotter.html
@@ -13,16 +13,26 @@
 canvas{
     margin: 0 auto;
 }
+
 cht_box{
   text-align: center;
 }
+
 cht_container{
   width: 65%;
   display: inline-block;
 }
+
+table {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  color: #373737;
+}
+
 </style>
 
-<body style="font-family: Arial">
+<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Helvetica Neue', Arial, sans-serif;">
 
      <!-- functions to toggle forms -->
     <script>
@@ -84,6 +94,8 @@ cht_container{
         <canvas id="bar-chart" width="1000" height="400"></canvas>
             <script>
                 var out = {{ data | tojson }};
+                console.log(out);
+
                 if (out.code > 0) {
                     msg = out.error
                     alert(msg)
@@ -124,7 +136,7 @@ cht_container{
 
     <!-- Table -->
     <br>
-    <div style="width: 1300px;">
+    <div >
         <div id="table"></div>
     </div>
 
@@ -141,14 +153,14 @@ cht_container{
               rowHeaders: true,
               colHeaders: out.data.table.columns,
               filters: true,
-              overflow: "auto",
-              colWidths: [100,100,400,400,200,100],
+              overflow: "hidden",
+              colWidths: [100,100,400,400,200,150],
               stretchH: "all",
               dropdownMenu: true,
+              preventOverflow: 'horizontal',
               licenseKey: 'non-commercial-and-evaluation'
             });
         };
-
     </script>
 </body>
 </html>
